Finished lesson. Made cheesy tagline more confusing. Changed to personal pictures.

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
 		 flex: 1;
 		 justify-content: center;
 		 align-items: center;
+
 		 display: flex;
 		 flex-direction: column;
 		    }
 
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+    .panel1 { background-image:url(https://lh3.googleusercontent.com/3EwvqaC0RfMQeraDOnnvtqQyo8S5xTb2lzZgOnMHZF5H5IkMZB3yiyYIZ5XLY6RQvnPNmZ5ahlYZa5kD_AyfkCc6pvChrlNDem-AOqOzezoLJqOOPajk3SqGsijQoumN5iZd83huk3owJCDYm3Y9tfKNc7avUXVMOHjdlWuGGrGs5BkhEGs-FrSRmjaZ8FRPkFQIuyoznyKybzbm2YF99-HQVZHN1A770tMylGj15VyzP7OSxL2C-aZ19dItYIiEhdrO3nDxpNkL2ug6QWkXXcqTABKEdQIpBijdMpr6yYA9_v9YDlJFGEnttTh17jlj0F_tcWsDQeCYPTz2hIq0atfbMZwy8tqC1uWxSjqVh9f8kuG3GWzDbZl_dVKrV6wD_wNda8k6MGtfWqFHFHeTR5GTdH5PJ7Di8wvVWcAygU1THOEGSk9bDVuixgGatF5phPs2G_hJ4iDk6hGqInfWmmN33kN-lH6wFsfH6yQh004a1kLuvqOBuv6SuQ-DEDFvve36NRh9OIZR1Yzw65Jr1hBNW7PxkUmTw5tjyZg4TJAfXtXB_pDMl2zjXjIz3Wye-m0CKy0C3WATrsQ8EJ67FWIVC-x0kU9RR1CgoH1n=w967-h647-no); }
+    .panel2 { background-image:url(https://lh3.googleusercontent.com/OtjBcGg2ye_T8gZQ_TwjXM34l2lsWvCl7LrvteQKXLFSK0KmjQuwlIoV_hck5AkeexoWDfe5d4vbfTg56J3vyQ7vsYRyO40481RbtuS8OAoDypTVSmcB86wWMX5OJKAdpqQs-cytitJgVSS8MK6JrFCJS3twCkzv7DpSrLtQxyYIsirlHi3IlccuZCmUPKLQ8F9Menl5hovi2AStZGJG27JJDhO9xkaHXikCP1nvc_Z129B1FFlLYaVEzAZ9lEwbuLlHO_FTHwOU14zU7OY0mX6IJw35HcBOn2HLp57WYDnO89sue6AhotGENVcHYlRnoD6tLcBt-JXJw-abJWSj6l1a5D2yh2O4CHEQ3igzdbREwx5zsIX7dMMXN9ytTwLrFvWzCuUBU9bPusTzcJ0Rax0Hiktpa2BiEAYvEXROlX9Sui-JCV3I-QPsiNIf-02Im6Q-N80PX4iKGh8esuX-IPOD1Q9GeFWnjjKSmkV_pe9O7fSNUqkCJbtuaRgz1cx0rVITViYvlNs0Y1JSA7-k1CVuACVqN4iMfckjggNSQCApw_3ULKhnLTAUZAMMBcv-2jemv_t8YHEKLJe6TAuFCPCDYxbl3UAXTF03i3SB=w967-h647-no); }
+    .panel3 { background-image:url(https://lh3.googleusercontent.com/PCoRmjbvE_cFX_KRfeP98alajPm6QsECacCJzJHWi387ezwV_KzU-Wf7hweoLpxP86S6oUtZ-cfeJI7IfYnxisZuEBx8Mk0djf1stUnHxTeBJVAJdtx7eL8ATur4PqP97pMgkEkBmcCCQMabwIY5laoWmcZjg_Lh264UYOLPzWwP_nGlX1ePyLmzlE8-Dd1CuRyykL1COjBsyc_sOhjvsU0sLTyXWOsBUBR9CgSbCi8tN7GER_-TTBipRTQT1aMqfvu_lnw97NdabQA2ogAvfaWi2aBNIo3V0lTWUOX8l589C2B5voprK2iq7Li0aBpIQv5NGdKVT__kuDm9OqIZn9FQtEmA21F8y7aKBhxEK9q_zB-wCnAws5VW3KBxjj-GjIuni2eqS80HmVYc0l0RF8vmgto7VVlV2GDpQOPs6viDqFAQo3os3tLHGaYVBCwPJeKXRJPXX2xt2lph7yAOAebxOiXkPYA9iH_k-QwF1--VN8Wj92tueh3gHkvBlQnimXZ8aSEhYH_HqHGjcN5AO_EDekGqg11BuRM9NwwcXc49bg4cYVFfEedjiwqUYjhzusEKSFP6dD5CZE8uTMfoHdL4FZrktBk-bzjap-SD5-h-FwUAGvrtr2obdpBKsOQAZ9c_yWh9qoFAH_HtJlJh1JtLZoT0qt2_zA=w486-h647-no); }
+    .panel4 { background-image:url(https://lh3.googleusercontent.com/PdUFpBCU7e7nUWdwQJ7Hd5IyWZZ2TFFDTFkXbskLK-QRXjUwkP_EPa2mIYkWAEYcYyoHSghcF65poDwaP9xZfVZzu6RxjghvqwgEdFDqfvMGQcFvosnDkGDyNNytx0mwg18MQioAuZerS6kz80XvW6n8LlPoS73pUR3O-7Ra97VPaadFxsfwjSc1aMW25zLZfIL_PWr06Ey1TrBzlC0pIjw77DUAQ5Xte5BBZM_CSBU2gkUVu8XkrEAvnjWLkREaTo_DN4Ea6Aa3VFVA5Tu3YWjN6T1zU6ONq-PzKe3NKjXuktLNiCUjFD374MOShBtZ79zOofkR_3SnnNRr9JI9rYPSlOLXkL1RLqGRzi-tJOlAi9V1g_UpEs82ivcws5FEZgx6jyJXW6uxsNY_WOvWI-oXi-bVZnpvMNSV79Pj4EFsWR-eDQqDpDoBkIQz7-EKCFqZje_6iiS3Nf2EHXPr_6Z76rBgC_FKoqxhrE8r1NR_XrjdqhePjwkhXoyNvZ4bPlvtUm1IbwuC-LlZEmlGESLjqv2EopVSoEJ5K5qgPeihUuUqJ3fAgwV_514Zu6m93_C77KX3XZB7gi7qIPYPt14htRKBFazQZCvhgDbE=w967-h647-no); }
+    .panel5 { background-image:url(https://lh3.googleusercontent.com/S-f0HupEAHMYxVDKvhL_mjQrc363TC_0b2tlgJARCeY_hp8M2dXk99r5uGnvHVwwXFcuZtxxLNJk1bxh1litGGz0h7TaywBzapMY9IdntqPRT27Nn3STf7Wfs1BC8yBiAkJ0ecSj8f2tIFCN1zO1u5t9WRNagQuz0wiy0mmLk_yY4us8_q8IIx_muR1_CcK6Q3VyWYkxQs-y-XYahYm2ula5FmUPxVGcXS2TwE9so4ZsgIMIrDUpNQKOQXd658HncNgag3jd5i-6I-X2o_gVM0Yfj1TkxPyvxExbXQxwrjiDwUO_zWTfPrOlXcdCOLL1GlPhB9X1gyXw59BV0HpE6yoqZeZERz7YeUwynvfDkPt39vuWn_zOKe6vfDg424kxOhmT-ftpw3OLPsZbUajpaKU5SpKFG4E9mr7f8FP9G7CohzKOOF7CKGYUBxLBb-O50pyi784Elpdpx1UmKZZxR-9ctWblhfCSWBG21mHK4jM5N0CrUpbBrQxKSkHaZRCLzkGPPsgGi_aHEuPHHYVGR946vyE3D0nmnEVQS8tHRzF4xiBFbdkonh2URp5RO8VsoNTczBqUfwaVhoMChAyS92mKgXdxrMFd9QnRNfzE=w967-h647-no); }
 
     /* flex children */
 
@@ -62,12 +63,17 @@
 		 margin:0;
 		 width: 100%;
 		 transition:transform 0.5s;
-		 border: 1px solid red;
 		 flex: 1 0 auto;
-		 display-flex;
+		 display: flex;
 		 justify-content: center;
 		 align-items: center;
     }
+
+	 .panel > *:first-child {transform: translateY(-100%);}
+	 .panel.open-active > *:first-child {transform: translateY(0%);}
+
+	 .panel > *:last-child {transform: translateY(100%);}
+	 .panel.open-active > *:last-child {transform: translateY(	0%);}
 
     .panel p {
       text-transform: uppercase;
@@ -80,7 +86,8 @@
     }
 
     .panel.open {
-      font-size:40px;
+		 font-size:40px;
+		 flex: 5;
     }
 
   </style>
@@ -90,31 +97,46 @@
     <div class="panel panel1">
       <p>Hey</p>
       <p>Let's</p>
-      <p>Dance</p>
+      <p>Drive</p>
     </div>
     <div class="panel panel2">
-      <p>Give</p>
+      <p>Let's</p>
       <p>Take</p>
-      <p>Receive</p>
+      <p>The Miata</p>
     </div>
     <div class="panel panel3">
-      <p>Experience</p>
+      <p>Eat</p>
       <p>It</p>
       <p>Today</p>
     </div>
     <div class="panel panel4">
-      <p>Give</p>
+      <p>Pet</p>
       <p>All</p>
-      <p>You can</p>
+      <p>The Dogs</p>
     </div>
     <div class="panel panel5">
       <p>Life</p>
       <p>In</p>
-      <p>Motion</p>
+      <p>Denver?</p>
     </div>
   </div>
 
   <script>
+	  const panels = document.querySelectorAll('.panel');
+
+	  function toggleOpen() {
+	  	this.classList.toggle('open');
+	  }
+
+	  function toggleActive(e) {
+	  	console.log(e.propertyName);
+	  	if(e.propertyName. includes ('flex')){
+	  		this.classList.toggle('open-active');
+		}
+	  }
+
+	  panels.forEach(panel => panel.addEventListener('click' , toggleOpen));
+	  panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
 
   </script>
 
